--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV = development
 PORT = 3000
 
 DATABASE_LOCAL = mongodb://localhost:27017/ecommerce
+
+JWT_SECRET=this_is_ecommrce_web_created_by_khac_lam
+JWT_EXPIRES_IN = 90d
